@@ -11,6 +11,7 @@
 class ConversionOptions;
 class KDialog;
 class QComboBox;
+class QCheckBox;
 
 
 class AacGainPluginItem : public ReplayGainPluginItem
@@ -48,9 +49,11 @@ public:
 
 private:
     QWeakPointer<KDialog> configDialog;
-    QComboBox *configDialogTagLabelComboBox;
+    QComboBox *configDialogTagModeComboBox;
+    QCheckBox *configDialogModifyAudioStreamCheckBox;
 
     int tagMode;
+    bool modifyAudioStream;
 
 private slots:
     /** The undo process has exited */
