@@ -1,4 +1,5 @@
 1.9.90 (2.0.0 rc1):
+-Add: Option to not modify the audio stream of mp3 files when calculating Replay Gain
 -Fix: Modify mp3 stream when forcing the recalculation of Replay Gain
 
 1.9.80 (2.0.0 beta1):
